# briefing-agent

./: .gitignore  .replit  LICENSE  PLAN.md  README.md  README_GMAIL_SETUP.md  SETUP.md  app.py  authenticate_gmail.py  demo_gmail_connection.py  pyproject.toml  replit.md  save_gmail_token.py  setup_gmail.md  test_gmail_connection.py  test_live_newsletters.py
agent/: __init__.py  gmail_client.py  gmail_fetcher.py  gmail_oauth.py  gmail_service_account.py  memory.py  synthesizer.py
data/: .gitkeep
evals/: __init__.py  eval_framework.py  test_gmail.py
